full_build.log
fluxus> configure (lib + exe)
Configuring fluxus-0.1.0.0...
fluxus> build (lib + exe) with ghc-9.8.4
Preprocessing library for fluxus-0.1.0.0..
Building library for fluxus-0.1.0.0..
[ 1 of 23] Compiling Fluxus.AST.Common [Flags changed]
[ 2 of 23] Compiling Fluxus.AST.Go [Flags changed]
[ 3 of 23] Compiling Fluxus.AST.Python [Flags changed]
[ 4 of 23] Compiling Fluxus.Analysis.EscapeAnalysis [Flags changed]
[ 5 of 23] Compiling Fluxus.Analysis.OwnershipInference [Flags changed]

/home/qwe12345678/hyperstatic2/src/Fluxus/Analysis/OwnershipInference.hs:317:3: warning: [GHC-62161] [-Wincomplete-patterns]
    Pattern match(es) are non-exhaustive
    In a case alternative:
        Patterns of type ‘(MemoryLocation, EscapeInfo, Bool)’ not matched:
            (Stack, EscapeToHeap, _)
            (Stack, EscapeToGlobal, _)
            (Stack, EscapeUnknown, _)
            (Stack, NoEscape, False)
            ...
    |
317 |   case (memLocation ownership, escapes ownership, ownsMemory ownership) of
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

/home/qwe12345678/hyperstatic2/src/Fluxus/Analysis/OwnershipInference.hs:322:19: warning: [GHC-62161] [-Wincomplete-patterns]
    Pattern match(es) are non-exhaustive
    In a case alternative:
        Patterns of type ‘Maybe Int’ not matched:
            Just p where p is not one of {1}
    |
322 |       refCount <- case refCount ownership of
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^...
[ 6 of 23] Compiling Fluxus.Analysis.ShapeAnalysis [Flags changed]

/home/qwe12345678/hyperstatic2/src/Fluxus/Analysis/ShapeAnalysis.hs:449:1: warning: [GHC-62161] [-Wincomplete-patterns]
    Pattern match(es) are non-exhaustive
    In an equation for ‘inferLiteralShape’:
        Patterns of type ‘Literal’ not matched: LUInt _
    |
449 | inferLiteralShape (LInt _) = inferShape (TInt 32)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
[ 7 of 23] Compiling Fluxus.Analysis.TypeInference [Flags changed]

/home/qwe12345678/hyperstatic2/src/Fluxus/Analysis/TypeInference.hs:403:49: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Type’ not matched:
            TInt _
            TUInt _
            TFloat _
            TBool
            ...
    |
403 |   let varMap = HashMap.fromList (zip vars (map (\(TVar v) -> v) freshVars))
    |                                                 ^^^^^^^^^^^^^^
[ 8 of 23] Compiling Fluxus.CodeGen.Go [Flags changed]

/home/qwe12345678/hyperstatic2/src/Fluxus/CodeGen/Go.hs:171:20: warning: [GHC-62161] [-Wincomplete-patterns]
    Pattern match(es) are non-exhaustive
    In a case alternative:
        Patterns of type ‘PythonLiteral’ not matched:
            PyComplex _ _
            PyFString _ _
            PyBytes _
            PyEllipsis
    |
171 |   PyLiteral lit -> case lit of
    |                    ^^^^^^^^^^^...

/home/qwe12345678/hyperstatic2/src/Fluxus/CodeGen/Go.hs:200:25: warning: [GHC-62161] [-Wincomplete-uni-patterns]
    Pattern match(es) are non-exhaustive
    In a lambda abstraction:
        Patterns of type ‘Located PythonArgument’ not matched:
            Located _ (ArgKeyword _ _)
            Located _ (ArgStarred _)
            Located _ (ArgKwStarred _)
    |
200 |         argExprs = map (\(Located _ (ArgPositional arg)) -> generateExpression config (locatedValue arg)) args
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ 9 of 23] Compiling Fluxus.Internal.Types [Flags changed]
[10 of 23] Compiling Fluxus.Internal.Monad [Flags changed]
[11 of 23] Compiling Fluxus.Optimization.Devirtualization [Flags changed]
[12 of 23] Compiling Fluxus.Optimization.Monomorphization [Flags changed]
[13 of 23] Compiling Fluxus.Parser.Go.Lexer [Flags changed]
[14 of 23] Compiling Fluxus.Parser.Go.Parser [Flags changed]
[15 of 23] Compiling Fluxus.Parser.Python.Lexer [Flags changed]
[16 of 23] Compiling Fluxus.Parser.Python.Parser [Flags changed]
[17 of 23] Compiling Fluxus.Runtime.Go [Flags changed]
[18 of 23] Compiling Fluxus.Runtime.Python [Flags changed]
[19 of 23] Compiling Fluxus.Utils.Graph [Flags changed]

/home/qwe12345678/hyperstatic2/src/Fluxus/Utils/Graph.hs:190:6: warning: [GHC-18042] [-Wtype-defaults]
    • Defaulting the type variable ‘a0’ to type ‘Integer’ in the following constraints
        (Num a0)
          arising from a use of ‘tarjan’
          at src/Fluxus/Utils/Graph.hs:190:6-11
        (Ord a0)
          arising from a use of ‘tarjan’
          at src/Fluxus/Utils/Graph.hs:190:6-11
    • In the expression: tarjan allNodes Map.empty Map.empty [] 0 []
      In the expression:
        let allNodes = map nodeId $ nodes graph
        in tarjan allNodes Map.empty Map.empty [] 0 []
      In an equation for ‘stronglyConnectedComponents’:
          stronglyConnectedComponents graph
            = let allNodes = map nodeId $ nodes graph
              in tarjan allNodes Map.empty Map.empty [] 0 []
            where
                tarjan [] _ _ _ _ result = result
                tarjan (v : vs) indices lowlinks stack index result
                  | Map.member v indices
                  = tarjan vs indices lowlinks stack index result
                  | otherwise
                  = let ...
                    in tarjan vs newIndices newLowlinks newStack newIndex newResult
                strongConnect v indices lowlinks stack index result
                  = let ...
                    in
                      foldl'
                        (processSuccessor v) (indices', lowlinks', stack', index', result)
                        (successors v graph)
                processSuccessor v (indices, lowlinks, stack, index, result) w
                  | not (Map.member w indices)
                  = let ... in (indices', lowlinks'', stack', index', result')
                  | w `elem` stack
                  = let ... in (indices, lowlinks', stack, index, result)
                  | otherwise = (indices, lowlinks, stack, index, result)
    |
190 |   in tarjan allNodes Map.empty Map.empty [] 0 []
    |      ^^^^^^

/home/qwe12345678/hyperstatic2/src/Fluxus/Utils/Graph.hs:395:28: warning: [GHC-63394] [-Wx-partial]
    In the use of ‘head’
    (imported from Prelude, but defined in GHC.List):
    "This is a partial function, it throws an error on empty lists. Use pattern matching or Data.List.uncons instead. Consider refactoring to use Data.List.NonEmpty."
    |
395 |                _ -> Just $ head $ filter (\d -> all (\other -> Set.member d (allDoms Map.! other)) candidates) candidates
    |                            ^^^^
[21 of 23] Compiling Fluxus.CodeGen.CPP

/home/qwe12345678/hyperstatic2/src/Fluxus/CodeGen/CPP.hs:412:7: error: [GHC-07626]
    Parse error in pattern: (_, _) when length ops + 1 == length exprs
    |
412 |       (_, _) when length ops + 1 == length exprs -> do
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package fluxus-0.1.0.0 (scroll up to its section to see the error) using:
       /home/qwe12345678/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_w2MFVN35_3.10.3.0_ghc-9.8.4 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.8.4 build lib:fluxus exe:fluxus exe:test-python-lexer exe:test-python-parser --ghc-options ""
       Process exited with code: ExitFailure 1 
